--- a/Customers/package.json
+++ b/Customers/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev":"nodemon customers"
+    "start": "node customers.js",
+    "dev":"nodemon customers.js"
   },
   "author": "",
   "license": "ISC",
