--- a/Orders/package.json
+++ b/Orders/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon orders"
+    "start": "node books.js",
+    "dev": "nodemon orders.js"
   },
   "author": "",
   "license": "ISC",
